testdata/baselines/reference/compiler/tluaNumberKeyDiagnosticDisplay.errors.txt
tluaNumberKeyDiagnosticDisplay.tlua(7,26): error TLUA1117: An object literal cannot have multiple properties with the same name.
tluaNumberKeyDiagnosticDisplay.tlua(13,14): error TLUA7053: Element implicitly has an 'any' type because expression of type '1' can't be used to index type 'Near'.
  Property '1' does not exist on type 'Near'.


==== tluaNumberKeyDiagnosticDisplay.tlua (2 errors) ====
    // A number key must render as its decimal text in diagnostics, never as the
    // internal "\xFEn:" mangled symbol name.
    
    // A duplicate number key is reported as '1', not as a mangled name. (This used
    // to be exercised through a spread override, `{ [1] = "a", ...src }`; table spread
    // is gone, so the duplicate is written directly.)
    local dup = { [1] = "a", [1] = "b" }; // error: duplicate '1'
                             ~~~
!!! error TLUA1117: An object literal cannot have multiple properties with the same name.
    
    // A missing number-key element access displays the key as '1' (a mangled name
    // must not reach the "Property ... does not exist" diagnostic).
    interface Near { l: string }
    declare n: Near;
    local miss = n[1]; // error: Property '1' does not exist on type 'Near'
                 ~~~~
!!! error TLUA7053: Element implicitly has an 'any' type because expression of type '1' can't be used to index type 'Near'.
!!! error TLUA7053:   Property '1' does not exist on type 'Near'.
    
    local es = {dup, miss};
    